tests/ui/parser/suggest-removing-semicolon-after-impl-trait-items.stderr
error: non-item in item list
  --> $DIR/suggest-removing-semicolon-after-impl-trait-items.rs:5:16
   |
LL | trait Foo {
   |           - item list starts here
LL |     fn bar() {};
   |                ^ non-item starts here
LL | }
   | - item list ends here
   |
help: consider removing this semicolon
   |
LL -     fn bar() {};
LL +     fn bar() {}
   |

error: aborting due to 1 previous error

