tests/ui/parser/suggest-removing-semicolon-after-impl-trait-items.rs
// run-rustfix

trait Foo {
    fn bar() {}; //~ ERROR non-item in item list
}

fn main() {}
